tests/test_proof/bad/enums_inj-overlap.catala_en
## Article

```catala
declaration enumeration E:
  -- C1
  -- C2

declaration scope A:
  context x content E
  context y content integer

scope A:
  definition x equals C1
  definition y under condition x = C1 consequence equals 1
  definition y under condition x = C2 consequence equals 2
  definition y under condition x = C2 consequence equals 3
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[ERROR] [A.y] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/enums_inj-overlap.catala_en
   |
10 |   context y content integer
   |           ^
   + Article
Counterexample generation is disabled so none was generated.
```
